--- a/assets/css/main-new2.css
+++ b/assets/css/main-new2.css
@@ -5,6 +5,38 @@
     --ap-text-color: #000 !important;
 }
 
+@font-face {
+    font-family: 'Graphik';
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url('../fonts/graphic_regular2.7.woff2') format('woff2'),
+    url('../fonts/graphic_regular.woff') format('woff');
+}
+
+@font-face {
+    font-family: 'Graphik';
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: url('../fonts/graphic_medium2.3.woff2') format('woff2'),
+    url('../fonts/graphic_medium.woff') format('woff');
+}
+
+body {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+body .page-wrapper {
+    display: block;
+    background-color: #fff;
+}
+.page-wrapper > .page {
+    max-width: 1920px !important;
+    margin: 0 auto;
+}
 
 
 h1,
@@ -13,7 +45,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: 'Rubik', sans-serif;
+    font-family: "Graphik";
 }
 
 p,
@@ -77,14 +109,13 @@ input {
 }
 
 
-
-
 /* =========== 
     header 
 ============= */
+
 .site-header .brand .navbar-brand {
     width: 105px;
-    height: 28px;
+    height: 32px;
     display: block;
     position: relative;
     top: -3px
@@ -94,11 +125,21 @@ input {
     width: 100%;
     height: 100%;
 }
+
+.site-header .navbar .container-fluid div:nth-child(2) {
+    width: auto;
+}
 @media (min-width: 992px) {
     .site-header .brand .navbar-brand {
         width: 152px;
-        height: 32px;
-        top: -7px
+        height: 38px;
+        top: -1px
+    }
+    .site-header .navbar .container-fluid div:nth-child(2) {
+        width: 100%;
+    }
+    .site-header form.search .search-input {
+        height: 48px !important;
     }
 }
 
@@ -128,10 +169,14 @@ input {
 }
 
 .site-header nav .navbar-nav:not(.nav-mobile) .nav-item .nav-link span {
-    font-size: 13px;
+    font-size: 14px;
+    font-weight: 400;
+    font-family: "Graphik";
 }
 .site-header nav .navbar-nav .nav-item .dropdown-menu .dropdown-item {
     font-size: 14px;
+    font-weight: 400;
+    font-family: "Graphik";
 }
 .site-header nav .navbar-nav .nav-item .dropdown-menu .dropdown-item:hover {
     background-color: #dfdcde;
@@ -141,22 +186,39 @@ input {
 
 
 /* header bottom */
-
-.site-header .header-bottom .navbar-nav::-webkit-scrollbar {
-    display: none;
-}
-/*.site-header .header-bottom .navbar-nav {*/
-/*    -webkit-mask-image: linear-gradient(to right, transparent, white 20px, white 90%, transparent);*/
-/*    mask-image: linear-gradient(to right, transparent, white 20px, white 90%, transparent);*/
-/*}*/
 .site-header .header-bottom .navbar-nav .nav-item {
-    margin-inline: 12px;
+    display: flex;
+    align-items: center;
+
+    background-image: linear-gradient(#333, #333), linear-gradient(white, white);
+    background-size: 0 2px, auto;
+    background-repeat: no-repeat;
+    background-position: center bottom;
+    transition: all .2s ease-out;
 }
+
 .site-header .header-bottom .navbar-nav .nav-item .nav-link {
-    font-weight: 600;
-    font-size: 14px;
-    color: #656565;
+    font-weight: 400;
+    font-size: 14.7px;
+    color: #000;
+    font-family: "Graphik";
+    word-break: normal;
+    white-space: normal;
+    text-align: center;
+    padding: 16px 8px 16px;
 }
+
+.site-header .header-bottom .navbar-nav .nav-item:focus,
+.site-header .header-bottom .navbar-nav .nav-item .nav-link:focus {
+    outline: none;
+}
+
+.site-header .header-bottom .navbar-nav .nav-item:hover,
+.site-header .header-bottom .navbar-nav .nav-item:has(a.show) {
+    background-size: 100% 2px, auto;
+}
+
+/* dropdowns */
 .site-header .header-bottom .dropdown-menu ul.menu,
 .site-header .header-bottom .dropdown-menu ul.menu ul.submenu {
     list-style: none;
@@ -168,16 +230,33 @@ input {
     padding-inline: 20px;
 }
 .site-header .header-bottom .dropdown-menu ul.menu > li > a {
-    font-weight: 600;
     font-size: 14px;
     text-decoration: none;
     text-align: left;
     color: #181818;
+    font-family: "Graphik";
+    font-weight: 700;
 }
 
 /* bottom: sub menu */
 .site-header .header-bottom .dropdown-menu {
     box-shadow: 0 9px 10px 0 rgba(0, 0, 0, 0.03);
+    top: 156px !important;
+    width: 100%;
+    border-radius: 0;
+    border-top: 1px solid #efefef;
+}
+
+/*991 to 1323*/
+@media (min-width: 991px) and (max-width: 998px) {
+    .site-header .header-bottom .dropdown-menu {
+        top: 198px !important;
+    }
+}
+@media (min-width: 998px) and (max-width: 1323px) {
+    .site-header .header-bottom .dropdown-menu {
+        top: 177px !important;
+    }
 }
 
 .site-header .header-bottom .dropdown-menu ul.menu ul.submenu > li {
@@ -189,54 +268,46 @@ input {
     font-size: 15px;
     font-weight: 400;
     text-decoration: none;
+    font-family: "Graphik";
 }
 .site-header .header-bottom .dropdown-menu ul.menu ul.submenu > li > a:hover {
     color: #a7a7a7;
 }
 
 
-.site-header .header-bottom .dropdown-menu {
-    top: 121px !important;
-    width: 100%;
-    border-radius: 0;
-}
-
 
 /* header search form */
-@media (min-width: 768px) {
-    .site-header form.search {
-        width: 100%;
-        max-width: 400px;
-    }
-}
-
 .site-header form.search .search-input {
     box-shadow: none;
     padding-left: 5px;
     padding-right: 0;
     border: 1px solid #eceeef;
     border-radius: 0 4px 4px 0;
-    background-color: #eceeef;
+    background-color: #fff;
     border-left: none;
     font-size: 14px;
     outline: none;
-    width: 350px;
+    width: 100%;
     z-index: 2;
     transition: none;
+    font-weight: 400;
+    font-family: "Graphik";
+}
+
+.site-header form.search .search-input::placeholder {
+    font-size: 15px;
+    font-weight: 400;
+    font-family: "Graphik";
+    text-transform: uppercase;
 }
 
 .site-header form.search .input-group-text {
     border-radius: 4px 0 0 4px;
-    background-color: #eceeef;
+    background-color: #fff;
     border: 1px solid #eceeef;
     border-right: none;
 }
 
-/*.site-header form.search .search-input:focus,*/
-/*.site-header form.search .search-input:focus + .input-group-text {*/
-/*    background-color: transparent;*/
-/*    border-color: var(--bs-gray-400);*/
-/*}*/
 
 @media (max-width: 767px) {
     .site-header form.search .search-input {
@@ -291,13 +362,12 @@ input {
 
 
 /* mobile nav */
-/* .navbar {
-   --bs-navbar-toggler-icon-bg: url(); 
-} */
 
 .navbar-nav.nav-mobile .nav-item a,
 .navbar-nav.nav-mobile .nav-item span {
     color: #585858;
+    font-weight: 400;
+    font-family: "Graphik";
 }
 .nav-mobile .mob-menu-container {
     left: 0;
@@ -346,6 +416,7 @@ input {
     margin-block: 0.5rem;
     text-decoration: none;
     color: #585858;
+    font-family: "Graphik";
 }
 
 
@@ -425,11 +496,15 @@ input {
 }
 .home .swiper-slide a .title{
     margin-top: 1rem;
-    color: #000;
+    color: #5c5c5c;
+    font-family: "Graphik";
+    font-weight: 700;
 }
 .home .swiper-slide a .title i {
     font-size: 18px;
     margin-left: 3px;
+    position: relative;
+    top: 3px;
 }
 .home .swiper-button-next {
     right: 1px !important;
