--- a/assets/css/main-new2.css
+++ b/assets/css/main-new2.css
@@ -245,6 +245,7 @@ input {
     width: 100%;
     border-radius: 0;
     border-top: 1px solid #efefef;
+    z-index: 3;
 }
 
 /*991 to 1323*/
@@ -1250,6 +1251,26 @@ ul.products li.product .price ins .woocommerce-Price-currencySymbol {
     background-color: #0c0c0c;
 }
 
+/*
+===========
+    Woocommerce : Form pay
+============
+*/
+
+.woocommerce-checkout.woocommerce-page.woocommerce-order-pay {
+    width:100%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+.woocommerce-checkout.woocommerce-page.woocommerce-order-pay .woocommerce {
+    max-width: 800px;
+    margin: auto;
+    padding: 3rem 1rem;
+}
+
 
 
 
@@ -1273,6 +1294,9 @@ ul.products li.product .price ins .woocommerce-Price-currencySymbol {
     border: none;
     outline: none;
 }
+
+
+
 
 
 
