--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@ Theme URI: mailto://officialabhishekpathak@gmail.com
 Author: Abhishek Kumar Pathak
 Author URI: mailto://officialabhishekpathak@gmail.com
 Description: A WP theme for Adnet Print Company
-Version: 1.0.2
+Version: 2.0.0
 Tested up to: 5.4
 Requires PHP: 5.6
-License: Copyright @Abhishek Kumar Pathak, All rights reserved.
-Text Domain: adnet-printing
+License: Copyright Abhishek Kumar Pathak, All rights reserved.
+Text Domain: adnet-print
 Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
 
 Normalizing styles have been helped along thanks to the fine work of
